update: add padding-right to avoid tag-trees being hide(遮挡) but the scrollbar

--- a/src/assets/styles/modules/resources/tag-picker.scss
+++ b/src/assets/styles/modules/resources/tag-picker.scss
@@ -51,6 +51,7 @@ $tag-tree-margin-top: 0.3em;
       justify-content: space-between;
       flex-wrap: wrap;
       margin-top: -$tag-tree-margin-top;
+      padding-right: var(--el-card-padding);
 
       .tag-tree {
         margin-top: $tag-tree-margin-top;
